--- a/website_school_portal/views/snippets.xml
+++ b/website_school_portal/views/snippets.xml
@@ -2,7 +2,7 @@
 <odoo>
 
     <!-- Template générique du snippet -->
-    <template id="hz_generic_insert_snippet" name="Snippet générique">
+    <template id="hz_generic_insert_snippet" name="Snippet générique Horizon">
         <section class="hz_generic_insert_snippet" data-template-name="hz_connexion_snippet">
             <div class="container">
                 <div class="dynamic_snippet_template"/>
@@ -13,50 +13,39 @@
     <!-- Template snippet connexion -->
     <template id="hz_connexion_snippet">
         <t t-set="translatable" t-value="true" />
-        <div class="row o_not_editable" t-ignore="true">
+        <div class="row justify-content-center o_not_editable" t-ignore="true">
             <t t-if="request.env.user == request.website.user_id">
                 <div class="col-lg-3 o_colored_level">
-                    <p style="text-align: center;">
-                        <strong>
-                            <em>Déjà inscrit ?</em>
-                        </strong>
-                    </p>
-                    <p style="text-align: center;">
-                        <a href="/my/home" class="btn btn-primary rounded-circle o_we_force_no_transition" data-bs-original-title="" title="" aria-describedby="popover707520" t-esc="'Se connecter'"/>
-                        <br/>
+                    <p class="text-center">
+                        <span class="d-block fw-bold fst-italic mb-3">
+                            Déjà inscrit ?
+                        </span>
+                        <a href="/my/home" class="btn btn-primary rounded-circle o_we_force_no_transition">Se connecter</a>
                     </p>
                 </div>
                 <div class="col-lg-3 o_colored_level">
-                    <p style="text-align: center;">
-                        <strong>
-                            <em>Pas encore de compte ?</em>
-                        </strong>
-                    </p>
-                    <p style="text-align: center;">
-                        <a href="/web/signup" class="btn btn-fill-secondary rounded-circle" data-bs-original-title="" title="">
-                            <font class="text-white" t-esc="'S\'inscrir​​​​​​e'">​</font>
+                    <p class="text-center">
+                        <span class="d-block fw-bold fst-italic mb-3">
+                            Pas encore de compte ?
+                        </span>
+                        <a href="/web/signup" class="btn btn-fill-secondary rounded-circle">
+                            S'inscrir​​​​​​e​
                         </a>
                     </p>
                 </div>
             </t>
             <t t-elif="request.env.user.partner_id.teacher == True">
-                <div class="row">
-                    <div class="o_colored_level col-lg-12">
-                        <p style="text-align: center;">
-                            <a href="/my/home" class="btn btn-primary rounded-circle" data-bs-original-title="" title="" t-esc="'Voir mon profil enseignant'"/>
-                            <br/>
-                        </p>
-                    </div>
+                <div class="o_colored_level col-lg-12">
+                    <p class="text-center">
+                        <a href="/my/home" class="btn btn-primary rounded-circle">Voir mon profil enseignant</a>
+                    </p>
                 </div>
             </t>
             <t t-else="">
-                <div class="row">
-                    <div class="o_colored_level col-lg-12">
-                        <p style="text-align: center;">
-                            <a href="/my/home" class="btn btn-primary rounded-circle" data-bs-original-title="" title="" t-esc="'Voir mon compte'"/>
-                            <br/>
-                        </p>
-                    </div>
+                <div class="o_colored_level col-lg-12">
+                    <p class="text-center">
+                        <a href="/my/home" class="btn btn-primary rounded-circle">Voir mon compte</a>
+                    </p>
                 </div>
             </t>
         </div>
