--- a/website_school_management/views/programmes.xml
+++ b/website_school_management/views/programmes.xml
@@ -6,6 +6,7 @@
     <!-- //////////////////////////////////////////////////////////////// -->
 
     <template id="programmes_liste">
+        <t t-set="additional_title">Programmes</t>
         <t t-call="website.layout"> <!-- Affiche le layout du site web -->
             <div class="container my-5">
                 <div class="row">
@@ -13,13 +14,13 @@
                         <h1 class="mb-3">Programmes</h1>
                         <div class="mt-4">
                             <t t-call="website_school_management.programmes_breadcrumb"/>
-                            <div class="breadcrumb_next_step">
+                            <div class="breadcrumb_next_step mb-4" t-if="len(options) != 0">
                                 <span class="fw-bold d-flex align-items-center"><i class="fa fa-filter fs-4 me-1 accented-color" aria-hidden="true"></i>Sélectionner :</span>
                                 <t t-foreach="options" t-as="option">
                                     <a t-att-title="'Sélectionner ' + option['name']" class="btn btn-outline-primary btn-sm fw-bold" t-att-href="option ['uri']"><t t-esc="option['name']" /></a>
                                 </t>
                             </div>
-                            <hr class="mt-4 mb-0"/>
+                            <hr class="my-0"/>
                         </div>
                     </div> 
                     <div class="col-12">
@@ -55,6 +56,7 @@
     <!-- //////////////////////////////////////////////////////////////// -->
 
     <template id="programme_fiche">
+        <t t-set="additional_title" t-value="program.title" />
         <t t-call="website.layout">
             <div class="container my-5">
                 <div class="row">
@@ -78,7 +80,7 @@
         </t>
     </template>
 
-   <template id="programme_details_contenu" name="Program Details Content">
+    <template id="programme_details_contenu" name="Program Details Content">
         <dl class="d-flex flex-wrap pt-2 mb-4">
             <div class="flex-grow-1">
                 <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Domaine</dt>
@@ -289,10 +291,10 @@
 
     <!-- TODO à adapter -->
     <template id="groupe_de_cours_fiche">
+        <t t-set="additional_title" t-value="course_group.title" />
         <t t-call="website.layout"> <!-- Affiche le layout du site web -->
-            <t t-set="title" t-value="course_group.title"/>
             <div class="container">
-                <h1>Groupe de cours : <t t-esc="title"/></h1>
+                <h1>Groupe de cours : <t t-esc="course_group.title"/></h1>
                 <ul>
                     <li>Code : <span t-field="course_group.uid"/></li>
                     <li>Cycle : <span t-field="course_group.cycle_id.grade"/></li>
@@ -321,6 +323,7 @@
 
     <!-- TODO à adapter -->
     <template id="groupe_de_cours_fiche_vide">
+        <t t-set="additional_title">Groupe de cours</t>
         <t t-call="website.layout"> <!-- Affiche le layout du site web -->
             <t t-set="title">Groupe de cours</t>
             <div class="container">
@@ -337,8 +340,8 @@
     <!-- //////////////////////////////////////////////////////////////// -->
 
     <template id="cours_fiche">
+        <t t-set="additional_title" t-value="course_docs[0].name" />
         <t t-call="website.layout"> <!-- Affiche le layout du site web -->
-            <t t-set="title" t-value="course_docs[0].name"/>
             <div class="container">
                 <t t-foreach="course_docs" t-as="course_doc"> <!-- Problème car avec plusieurs course_doc, potentielle répétition -->
                     <t t-call="website_school_management.cours_fiche_details" />
@@ -347,7 +350,9 @@
         </t>      
     </template>
 
-  <template id="cours_fiche_details">
+  
+  
+    <template id="cours_fiche_details">
         <div>
             <h1><t t-if="course_doc.state == 'draft'">Brouillon - </t>Détails du cours : <span t-field="course_doc.name"/></h1>
             <h3>par <span t-field="course_doc.author_id"/></h3>
@@ -415,12 +420,12 @@
             <div class="breadcrumb mb-4">
                 <t t-set="count" t-value="1" />
                 <t t-foreach="breadcrumb" t-as="breadcrumb_item">
-                    <t t-if="count &lt; len(breadcrumb)">
-                        <a t-att-title="'Retourner à ' + breadcrumb_item['name']" class="breadcrumb-elem" t-att-href="breadcrumb_item['uri']"><t t-esc="breadcrumb_item['name']" /></a>
-                        <t t-set="count" t-value="count + 1" />
+                    <t t-if="count == len(breadcrumb)">
+                        <span class="breadcrumb-elem -active" ><t t-esc="breadcrumb_item['name']" /></span>
                     </t>
                     <t t-else="1">
-                        <span class="breadcrumb-elem -active" ><t t-esc="breadcrumb_item['name']" /></span>
+                        <a t-att-title="'Retourner à ' + breadcrumb_item['name']" class="breadcrumb-elem" t-att-href="breadcrumb_item['uri']"><t t-esc="breadcrumb_item['name']" /></a>
+                        <t t-set="count" t-value="count + 1" />
                     </t>
                 </t>
             </div>
