--- a/website_school_portal/views/custom.xml
+++ b/website_school_portal/views/custom.xml
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="oe_structure">
-                        <section class="hz_generic_insert_snippet o_colored_level o_dynamic_empty" data-template-name="hz_connexion_snippet" data-snippet="hz_generic_insert_snippet" data-name="Snippet générique" style="background-image: none;">
+                        <section class="hz_generic_insert_snippet o_colored_level o_dynamic_empty" data-template-name="hz_horizon_access" data-snippet="hz_generic_insert_snippet" data-name="Snippet générique" style="background-image: none;">
                         </section>
                     </div>
                 </div>
